# Shelf-Selection-MCF

./: .gitignore  BUILD_GUIDE.md  CMakeLists.txt  README.md  build.bat  build.sh  example.env
WES/: CMakeLists.txt
WES/include/: order_manager.h  shelf_selection.h  stock.h  task_manager.h
WES/src/: order_manager.cpp  shelf_selection.cpp  stock.cpp  task_manager.cpp  wes.cpp
WMS/: CMakeLists.txt
WMS/src/: publisher.cpp  publisher.h  wms.cpp
include/: order.h  publisher.h  rack.h  shelf_selection.h  stock.h  task.h  task_manager.h  types.h
mcf_db/: NOTES.md  insert_example.sql  schema.sql
my_MCF_db/: NOTES.md
src/: db_connector.cpp  db_connector.h  main.cpp  order.cpp  order.h  publisher.cpp  rack.h  shelf_selection.cpp  stock.cpp  task.cpp  task_manager.cpp  utils.cpp  utils.h
